src/test/deca/syntax/invalid/created/return/void_method_return_no_parent.deca
// Description:
// 		Utiliser return dans une methode void
// Resultat:
//		Erreur de syntaxe Ligne 9 : mismatched input ';' expecting {'false', 'new', 'null', 'readInt', 'readFloat', 'this', 'true', IDENT, '-', '(', '!', INT, FLOAT, STRING}

class A {
	void affiche(){
		println("OK");
		return;
	}
}

{
	A a = new A();
	a.affiche();
}
